--- a/src/_includes/layouts/header.njk
+++ b/src/_includes/layouts/header.njk
@@ -1,20 +1,22 @@
 <header>
   <a id="logo" href="{{ "/" | url }}">
-    <img src="https://avatars.githubusercontent.com/u/18480654?s=60"/>
+    {# <img src="https://avatars.githubusercontent.com/u/18480654?s=60"/> #}
     <h1>Raphael Höser</h1>
   </a>
   {% set navPages = collections.all | eleventyNavigation %}
   <nav>
-  {%- for entry in navPages %}
-    <li{% if entry.url == page.url %}
-        class="current"
-      {% else %}
-        {% for child in collections.all | eleventyNavigation(entry.key) %}
-          {% if page.url == child.url %}class="current"{% endif %}
-        {%- endfor %}
-      {% endif %}>
-      <a href="{{ entry.url | url }}">{{ entry.title }}</a>
-    </li>
-  {%- endfor %}
+    <ul>
+    {%- for entry in navPages %}
+      <li{% if entry.url == page.url %}
+          class="current"
+        {% else %}
+          {% for child in collections.all | eleventyNavigation(entry.key) %}
+            {% if page.url == child.url %}class="current"{% endif %}
+          {%- endfor %}
+        {% endif %}>
+        <a href="{{ entry.url | url }}">{{ entry.title }}</a>
+      </li>
+    {%- endfor %}
+    </ul>
   </nav>
 </header>
