Add metadate around the blog

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -10,6 +10,9 @@ eleventyComputed:
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ description }}">
+  <meta name="theme-color" content="{{ meta.theme_color }}">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="https://avatars.githubusercontent.com/u/18480654?s=192">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="{{ "/css/main.css" | url }}">
 </head>
