--- a/src/posts.njk
+++ b/src/posts.njk
@@ -13,7 +13,7 @@ eleventyNavigation:
           {{ post.data.title }}
         </a>
       </h2>
-      <span>{{ post.date.getFullYear() }}</span>
+      <span>{{ post.date.toLocaleDateString('de-DE') }}</span>
     </header>
     <p>{{ post.data.short }}</p>
   </article>
