Add Syntax Highlighting

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -15,6 +15,7 @@ eleventyComputed:
   <link rel="apple-touch-icon" href="https://avatars.githubusercontent.com/u/18480654?s=192">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="{{ "/css/main.css" | url }}">
+  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 <body>
   {% include "./header.njk" %}
