Inline CSS and add better styling

--- a/src/_includes/layouts/footer.njk
+++ b/src/_includes/layouts/footer.njk
@@ -1,5 +1,7 @@
 <footer>
-  © Raphael Höser 2021
-  <br>
-  Look Ma, no Cookies!
+  <section class="content">
+    © Raphael Höser 2021
+    <br>
+    Look Ma, no Cookies!
+  </section>
 </footer>
