--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -6,6 +6,8 @@ eleventyComputed:
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://avatars.githubusercontent.com">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,14 +16,21 @@ eleventyComputed:
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="https://avatars.githubusercontent.com/u/18480654?s=192">
   <title>{{ title }}</title>
-  <link rel="stylesheet" href="{{ "/css/main.css" | url }}">
-  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+  <style>
+    {% include "../../css/main.css" %}
+  </style>
 </head>
 <body>
   {% include "./header.njk" %}
   <main>
-    {{ content | safe }}
+    <section class="content">
+      {{ content | safe }}
+    </section>
   </main>
   {% include "./footer.njk" %}
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"></noscript>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap"></noscript>
 </body>
 </html>
