--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,6 +1,8 @@
 ---
 layout: layouts/main.njk
 ---
+<link rel="stylesheet" href="{{ "/css/syntax_highlighting.css" | url }}">
+<link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 <h1>{{ title }}</h1>
 <article>
   {{ content | safe }}
