--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,12 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-  --xxs: .1rem;
-  --xs: .3rem;
-  --s: .5rem;
+  --xxs: 0.1rem;
+  --xs: 0.3rem;
+  --s: 0.5rem;
   --m: 1rem;
   --l: 1.2rem;
   --xl: 1.5rem;
@@ -14,18 +15,29 @@
 
   --bg-color-main: #fff;
   --bg-color-1: #334;
-  --text-color-on-bg-main: #223;
+  --text-color-on-bg-main: hsl(240, 14%, 25%);
   --text-color-on-bg-1: #eee;
   --text-color-on-bg-1-darker: #ccc;
   --text-color-on-bg-1-lighter: #fff;
-  --highlight-color-1: #fa0;
+  --text-color-on-bg-2: #eee;
+  --text-color-on-bg-2-darker: #ccc;
+  --text-color-on-bg-2-lighter: hsl(240, 14%, 25%);
+  --highlight-color-1: hsl(37, 100%, 50%);
+  --highlight-color-2: hsl(37, 100%, 50%);
+  --highlight-color-2--lighter: hsl(240, 14%, 25%);
+  --highlight-color-2--lightest: hsl(240, 14%, 95%);
 
-  --transition-duration-in: .1s;
-  --transition-duration-out: .3s;
+  --transition-duration-in: 0.1s;
+  --transition-duration-out: 0.3s;
 }
 
-ol, ul {
+ol,
+ul {
   list-style-position: inside;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Kalam', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 body {
@@ -33,21 +45,27 @@ body {
   min-height: 100vh;
   grid: "header" auto "main" 1fr "footer" auto;
   /* background: #223; */
-  font-family: system-ui, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Open Sans", system-ui, "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+    sans-serif;
   line-height: 1.5;
 }
 
 body > header {
+  width: 100%;
+  z-index: 1024;
   grid-area: header;
   position: sticky;
   top: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 0 var(--xxl);
-  align-items: flex-end;
   background: var(--bg-color-1);
   color: var(--text-color-on-bg-1);
+}
+
+body > header section.content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: space-between;
+  gap: 0 var(--xxl);
 }
 
 #logo {
@@ -55,13 +73,13 @@ body > header {
   color: var(--text-color-on-bg-1-lighter);
   display: flex;
   align-items: center;
-  padding: var(--m);
+  padding: var(--m) 0;
   gap: var(--s);
 }
 
 #logo img {
   background: var(--bg-color-main);
-  border: .2rem solid #fff;
+  border: 0.2rem solid #fff;
   height: var(--xxl);
   box-sizing: border-box;
   /* overflow: hidden; */
@@ -76,7 +94,6 @@ nav ul {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  padding: 0 var(--m);
 }
 
 nav a {
@@ -126,28 +143,84 @@ nav .current a::after {
   background: var(--highlight-color-1);
 }
 
+section.content {
+  width: 100%;
+  max-width: 100ch;
+  margin: auto;
+  padding: 0 var(--m);
+}
+
 main {
   grid-area: main;
-  padding: var(--xxl) var(--m);
+  padding: var(--xxl) 0;
   background: var(--bg-color-main);
   color: var(--text-color-on-bg-main);
   width: 100%;
   min-width: 0;
-  box-sizing: border-box;
 }
 
 main img {
   max-width: 100%;
 }
 
-main p, main h1, main h2 {
-  margin-top: var(--m);
-  margin-bottom: var(--s);
+main p{
+  margin-top: 1em;
+  margin-bottom: .5em;
+}
+main h1,
+main h2,
+main h3,
+main h4
+{
+  margin-top: 2em;
+  margin-bottom: .5em;
 }
 
 footer {
+  width: 100%;
   grid-area: footer;
   padding: 1rem;
   background: var(--bg-color-1);
   color: var(--text-color-on-bg-1-darker);
+}
+
+.post_preview {
+  margin: var(--xl) 0;
+}
+
+.post_preview header {
+  display: flex;
+  align-items: stretch;
+  background: var(--highlight-color-2);
+  border-radius: var(--xs) var(--xs) 0 0;
+  color: var(--text-color-on-bg-2-lighter);
+}
+
+.post_preview header h2 {
+  flex-grow: 1;
+  margin-bottom: 0;
+  margin: 0;
+}
+
+.post_preview header a {
+  display: block;
+  text-decoration: none;
+  color: var(--text-color-on-bg-2-lighter);
+  padding: var(--s);
+}
+
+.post_preview header span {
+  display: block;
+  text-decoration: none;
+  padding: var(--s);
+}
+
+.post_preview p {
+  margin-top: 0;
+  background: var(--highlight-color-2--lightest);
+  display: block;
+  color: #000;
+  text-decoration: none;
+  padding: var(--s);
+  border-radius: 0 0 var(--xs) var(--xs);
 }
