--- a/src/css/main.css
+++ b/src/css/main.css
@@ -159,7 +159,7 @@ nav .current a::after {
 
 section.content {
   width: 100%;
-  max-width: 100ch;
+  max-width: 60rem;
   margin: auto;
   padding: 0 var(--m);
 }
