--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,8 +1,9 @@
 ---
 layout: layouts/main.njk
+assets:
+  css:
+  - https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css
 ---
-<link rel="preload" href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css"></noscript>
 
 <style>
   {% include "../../css/syntax_highlighting.css" %}
