--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,7 +77,7 @@ body > header {
 body > header section.content {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
+  align-items: stretch;
   justify-content: space-between;
   gap: 0 var(--xxl);
 }
@@ -108,6 +108,7 @@ nav ul {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  height: 100%;
 }
 
 nav a {
@@ -117,6 +118,8 @@ nav a {
   font-size: var(--m);
   transition: color var(--transition-duration-out);
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 nav li {
@@ -205,32 +208,55 @@ footer {
 }
 
 .post_preview header {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto auto;
+  grid-template-columns: 1fr;
+  grid-template-areas: "image" "title" "date";
   background: var(--highlight-color-2);
   border-radius: var(--xs) var(--xs) 0 0;
   color: var(--text-color-on-bg-2-lighter);
 }
 
 .post_preview header h2 {
-  flex-grow: 1;
   margin-bottom: 0;
   margin: 0;
+  padding: var(--s);
+  grid-area: title;
+  z-index: 0;
 }
 
-.post_preview header a {
+.post_preview a {
   display: block;
   text-decoration: none;
   color: var(--text-color-on-bg-2-lighter);
-  padding: var(--s);
   height: 100%;
 }
 
 .post_preview header span {
-  display: block;
   text-decoration: none;
   padding: var(--s);
+  grid-area: date;
+  z-index: 0;
+}
+
+.post_preview header picture {
+  object-fit: cover;
+  overflow: hidden;
+  grid-area: image-start / image-start / date-end / date-end;
+  position: relative;
+  z-index: 0;
+}
+
+.post_preview header picture::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(#fff8, var(--highlight-color-2));
 }
 
 .post_preview p {
@@ -244,10 +270,6 @@ footer {
   flex-direction: column;
 } */
 
-.post_previews .post_preview .preview_body {
-  flex-grow: 1;
-}
-
 .card_grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
@@ -256,9 +278,13 @@ footer {
 
 .card_grid__card {
   display: grid;
-  grid-template-rows: 10rem 15rem;
+  grid-template-rows: 11rem 15rem;
   grid-template-rows: subgrid;
   box-shadow: 0 var(--xxs) var(--xs) rgba(0,0,0,0.16), 0 var(--xxs) var(--xs) rgba(0,0,0,0.23);
   grid-row: span 2;
   grid-template-areas: "header" "body";
+}
+
+.card_grid__card__header {
+  grid-area: header;
 }
