--- a/src/_includes/layouts/header.njk
+++ b/src/_includes/layouts/header.njk
@@ -14,8 +14,8 @@
           <a href="{{ entry.url }}">{{ entry.title }}</a>
         </li>
         {%- endfor %}
-        {% if collections.post %}
-        {% set latest_post = collections.post | last %}
+        {% if collections.Post %}
+        {% set latest_post = collections.Post | last %}
         <li {% if latest_post.url == page.url %}
         class="current"
         {% endif %}><a href="{{ latest_post.url }}">Latest Post</a></li>
