--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -4,7 +4,11 @@ assets:
   css:
   - https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css
 ---
-
+<div class="tags">
+  {% for tag in tags.slice(1) %}
+  <a href="/tags/{{ tag | slug }}">{{ tag }}</a>
+  {% endfor %}
+</div>
 <style>
   {% include "../../css/syntax_highlighting.css" %}
 </style>
