Make the structure even simpler
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/header.njk
+++ b/src/_includes/layouts/header.njk
@@ -23,7 +23,7 @@
       </ul>
     </nav> -->
     <nav>
-      {{ collections.all | eleventyNavigation | eleventyNavigationToHtml({activeAnchorClass: "current", activeKey: eleventyNavigation.key }) | safe }}
+      {{ collections.all | reverse | eleventyNavigation | eleventyNavigationToHtml({activeAnchorClass: "current", activeKey: eleventyNavigation.key }) | safe }}
     </nav>
     </section>
 </header>
