--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -14,6 +14,7 @@ assets:
 </style>
 
 <h1>{{ title }}</h1>
+<div class="post_date">{{ page.date.toUTCString().substr(0,16) }}</div>
 
 <article>
   {{ content | safe }}
