fix mobile code view
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -24,8 +24,8 @@ html {
 
 body {
   min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto auto 1fr auto;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -219,6 +219,10 @@ footer img {
 
 .footerSections a {
   color: var(--theme-color-b);
+}
+
+main {
+  flex-grow: 1;
 }
 
 main > .content > article {
