--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -3,7 +3,7 @@
     <div class="footerSections">
       <section class="bioFooter">
         <div class="fwrap">
-          <img src="/assets/img/me.jpg" alt="Picture of Raphael Höser smiling into the camera"/>
+          {% image "assets/img/me.jpg", "Picture of Raphael Höser smiling into the camera", "9rem" %}
         </div>
         <div class="fwrap">
           <h1>Woohey!</h1>
