Add dynamic theme color

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{metaDescription}}" />
+    <meta name="theme-color" content="{{ theme.colorA}}"/>
     <title>Snapstromegon - {{title or eleventyNavigation.key or "Blog"}}</title>
     <style>
       {% include "../../css/critical.css" %}
