Add reddit profile link

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -20,11 +20,15 @@
         <ul>
           <li>
             Twitter:
-            <a href="https://twitter.com/Snapstromegon">@Snapstromegon</a>
+            <a target="_blank" rel="noopener" href="https://twitter.com/Snapstromegon">@Snapstromegon</a>
           </li>
           <li>
             Github:
-            <a href="https://github.com/Snapstromegon">@Snapstromegon</a>
+            <a target="_blank" rel="noopener" href="https://github.com/Snapstromegon">@Snapstromegon</a>
+          </li>
+          <li>
+            Reddit:
+            <a target="_blank" rel="noopener" href="https://www.reddit.com/user/Snapstromegon">u/Snapstromegon</a>
           </li>
         </ul>
       </section>
