--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -137,7 +137,8 @@ header nav a.current::after {
 }
 
 .content {
-  max-width: 75rem;
+  max-width: 80rem;
+  width: 90%;
   margin: auto;
   padding: 0 1rem;
 }
@@ -179,11 +180,16 @@ footer {
 .devider h1 {
   font-size: 4rem;
   font-family: Lato;
+  max-width: 50rem;
 }
 
 .devider a {
   color: inherit;
   text-decoration: none;
+}
+
+.devider .abstract {
+  max-width: 30rem;
 }
 
 footer {
@@ -230,7 +236,10 @@ main > .content > article {
   margin: 6rem 0;
 }
 
-main > .content > article p {
+main > .content > article p,
+main > .content > article h2,
+main > .content > article summary,
+main > .content > article pre {
   max-width: 50rem;
 }
 
@@ -239,7 +248,11 @@ main > .content > article p {
   display: block;
   width: 6rem;
   height: 0.1rem;
-  background: linear-gradient(to right, var(--theme-color-a), var(--theme-color-b));
+  background: linear-gradient(
+    to right,
+    var(--theme-color-a),
+    var(--theme-color-b)
+  );
 }
 
 .blogpostList {
@@ -258,12 +271,13 @@ main > .content > article p {
   color: #000;
   text-decoration: none;
   padding: 1rem;
-  border: .1rem solid #000;
+  border: 0.1rem solid #000;
   display: block;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
-.blogpostList h2, .blogpostList p {
+.blogpostList h2,
+.blogpostList p {
   margin: 0;
 }
 
@@ -293,17 +307,33 @@ main > .content > article p {
   grid-area: tags;
   display: flex;
   flex-wrap: wrap;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .blogpost-tag {
-  padding: .3rem .6rem;
+  padding: 0.3rem 0.6rem;
   background: #333;
   color: #ccc;
   border-radius: 100vh;
   text-transform: uppercase;
   font-weight: bolder;
-  font-size: .9rem;
+  font-size: 0.9rem;
+  display: inline-block;
+}
+
+.blogpost-tag-category__lang {
+  background: hsl(100deg 50% 25%);
+  color: #fff;
+}
+
+.blogpost-tag-category__concept {
+  background: hsl(200deg 50% 25%);
+  color: #fff;
+}
+
+.blogpost-tag-category__tool {
+  background: hsl(0deg 50% 25%);
+  color: #fff;
 }
 
 ol,
@@ -316,15 +346,81 @@ main img {
   height: auto;
 }
 
-main p{
+main p {
   margin-top: 1em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 main h1,
 main h2,
 main h3,
-main h4
-{
+main h4 {
   margin-top: 2em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
+}
+
+.blog_devider {
+  display: flex;
+  gap: 3rem;
+  flex-wrap: wrap;
+}
+
+.blogpost_overview {
+  background: #222;
+  position: relative;
+  z-index: 1;
+  border-radius: 0.3rem;
+  flex-grow: 1;
+  align-self: flex-end;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  transform: none;
+  margin-bottom: 3rem;
+}
+
+@media (min-width: 50rem) {
+  .blog_devider {
+    flex-wrap: nowrap;
+  }
+
+  .blogpost_overview {
+    transform: translateY(6rem);
+    margin-bottom: 0rem;
+  }
+}
+
+.blogpost_overview::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0.22rem;
+  bottom: -3rem;
+  height: 3rem;
+  width: 6rem;
+  background: #555;
+  clip-path: polygon(0 0, 100% 0, 0 100%);
+}
+
+.blogpost_meta {
+  display: flex;
+  flex-direction: column;
+}
+
+.blogpost_meta__label {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #adadad;
+}
+
+.blogpost_meta__value {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.blogpost_overview .post_tags {
+  grid-area: tags;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
