--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -1,8 +1,10 @@
 ---
 layout: layouts/rootpage.njk
 theme:
-  colorA: "#271"
-  colorB: "#f80"
+  colorA: "#e62"
+  colorB: "#0dd"
+#  colorA: "#271"
+#  colorB: "#f80"
 eleventyNavigation:
   key: Blog
   order: 2
