--- a/src/webdev-sins.liquid
+++ b/src/webdev-sins.liquid
@@ -1,8 +1,8 @@
 ---
 layout: layouts/rootpage.njk
 theme:
-  colorA: "#e62"
-  colorB: "#0dd"
+  colorA: "#000"
+  colorB: "#f00"
 eleventyNavigation:
   key: WebDev-Sins
   order: 3
