--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -11,7 +11,7 @@ eleventyNavigation:
 ---
 
 <ul class="blogpostList">
-  {% for blogpost in collections.posts %}
+  {% for blogpost in collections.blogposts %}
   <li>
     <a href="{{ blogpost.url }}">
       <article>
