--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -10,7 +10,7 @@
     <style>
       {% include "../../css/critical.css" %}
     </style>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.png">
+    {% favicon "assets/img/hummingbird_flipped.svg" %}
   </head>
   <!--
     _____                 _                                 
