--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -274,6 +274,7 @@ main > .content > article pre {
   border: 0.1rem solid #000;
   display: block;
   border-radius: 0.5rem;
+  height: 100%;
 }
 
 .blogpostList h2,
@@ -287,6 +288,7 @@ main > .content > article pre {
   grid-template-rows: auto 1fr auto;
   grid-template-areas: "title date" "abstract abstract" "tags tags";
   gap: 1rem;
+  height: 100%;
 }
 
 .blogpostList article .post_date {
@@ -423,4 +425,8 @@ main h4 {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
+}
+
+a {
+  color: var(--theme-color-b);
 }
