--- a/src/webdev-sins.njk
+++ b/src/webdev-sins.njk
@@ -17,11 +17,11 @@ eleventyNavigation:
 </article>
 
 <ul class="blogpostList">
-  {% for blogpost in collections.sins %}
+  {% for blogpost in collections.sins | reverse %}
   <li>
     <a href="{{ blogpost.url }}">
       <article>
-        <p class="post_date">{{ blogpost.date | date: "%d. %b %Y" }}</p>
+        <p class="post_date">{{ blogpost.date | niceDate }}</p>
         <h2 class="post_title">{{ blogpost.data.title }}</h2>
         <div class="post_tags">
           {% for tag in blogpost.data.tags %}
