the list indent was a little too eager

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -338,8 +338,8 @@ main > .content > article pre {
   color: #fff;
 }
 
-ol,
-ul {
+main ol,
+main ul {
   /* list-style-position: inside; */
   padding-left: 3rem;
 }
