Fix bloglist padding
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -260,6 +260,7 @@ main > .content > article pre {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   list-style: none;
+  padding: 0;
   gap: 3rem;
 }
 
