--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -3,14 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="alternate" type="application/atom+xml" href="{{meta.feedUrl}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{metaDescription}}" />
     <meta name="theme-color" content="{{ theme.colorA}}"/>
+    <meta name="twitter:title" content="{{ title }}" />
+    <meta name="twitter:description" content="{{ description }}" />
+    <meta name="twitter:site" content="@Snapstromegon" />
+    <meta name="twitter:creator" content="@Snapstromegon" />
+    <meta name="author" content="Raphael Höser">
+    <meta name="publisher" content="Raphael Höser">
+    <meta name="copyright" content="Raphael Höser">
+    <meta name="page-topic" content="Bildung">
+    <meta name="page-type" content="Private Homepage">
+    <meta name="audience" content="Fortgeschrittene">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="content-language" content="en">
+    <link rel="manifest" href="/manifest.json">
     <title>Snapstromegon - {{title or eleventyNavigation.key or "Blog"}}</title>
     <style>
       {% include "../../css/critical.css" %}
     </style>
-    {% favicon "assets/img/hummingbird_flipped.svg" %}
+    {% favicon meta.favicon %}
   </head>
   <!--
     _____                 _                                 
