--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="alternate" type="application/atom+xml" href="{{meta.feedUrl}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{{metaDescription}}" />
+    <meta name="description" content="{{metaDescription or "This is the blog of Snapstromegon (Raphael Höser) where I chat about web technologies and web development." }}" />
     <meta name="theme-color" content="{{ theme.colorA}}"/>
     <meta name="twitter:title" content="{{ title }}" />
     <meta name="twitter:description" content="{{ description }}" />
