Add offline service worker to makle fireqorks
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -24,6 +24,18 @@
     <style>
       {% include "../../css/critical.css" %}
     </style>
+    <script defer>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js', {scope: '/'})
+        .then((reg) => {
+          // registration worked
+          console.log('Registration succeeded. Scope is ' + reg.scope);
+        }).catch((error) => {
+          // registration failed
+          console.log('Registration failed with ' + error);
+        });
+      }
+    </script>
     {% favicon meta.favicon %}
   </head>
   <!--
